cmake_minimum_required(VERSION 2.8)
project(test5)
set(CMAKE_CXX_STANDARD 14)
add_executable(test5
  test5.cpp)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
target_link_libraries(test5 ${OpenCV_LIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
